--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Ichlas web</title>
 </head>
 <body>
-    ayayaya
+    <canvas id="canvas" width='200' height='200'>
+        Mending opera GX
+    </canvas>
 </body>
 </html>
