--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ichlas web</title>
 </head>
-<body>
-    <canvas id="canvas" width='200' height='200'>
-        Mending opera GX
+<body onload="main()">
+    <canvas id="kanvas" width='300' height='300'>
     </canvas>
+    <br>Mending opera GX
+    <script src="main.js"></script>
 </body>
 </html>
