--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Ichlas web</title>
 </head>
 <body onload="main()">
-    <canvas id="kanvas" width='300' height='300'>
-    </canvas>
-    <br>Mending opera GX
+    <canvas id="kanvas" width='300' height='300'>Mending opera GX</canvas>
     <script src="main.js"></script>
 </body>
 </html>
