--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ichlas web</title>
 </head>
-<body onload="main()">
-    <canvas id="kanvas" width='500' height='500'>Mending opera GX</canvas>
-    <script src="main.js"></script>
+<body>
+    <canvas id="kanvas" width='800' height='800'>Mending opera GX</canvas>
+    <script src="gl-matrix-min.js" ></script>
+    <script src="gl-matrix.js" ></script>
+    <script src="main.js" ></script>
 </body>
 </html>
